<resources>
    <!-- Shrink -->
    <string name="app_name">Shrink</string>
    <string name="app_title">Compression</string>
    <string name="app_desc">An application to compress a file both locally and in a distributed way.</string>
    <string name="info">Info</string>

    <!-- Compress file -->
    <string name="cf_title">Compress File</string>
    <string name="cf_total_devices">Total Devices: %1$d</string>
    <string name="cf_file_name">FileName: %1$s</string>
    <string name="cf_choose_file">Choose File</string>
    <string name="cf_compress">Compress</string>
    <string name="cf_refresh">Refresh</string>
    <string name="cf_switchText">Remote Compression</string>

    <!-- Share Resource -->
    <string name="sr_title">Share Device</string>
    <string name="sr_device_name">Device Name: %1$s</string>
    <string name="sr_device_status">Device Status: %1$s</string>
    <string name="sr_freespace">Free Space: %1$d</string>
    <string name="sr_connect">Connect</string>
    <string name="sr_output">tmp_file.dcrz</string>
    <string name="sr_disconnect">Disconnect</string>
    <string name="sr_server_ip">192.168.43.1</string>
    <string name="sr_tmp_file">temp.dat</string>
    <string name="sr_tmpc_file">temp.dat.dcrz</string>
    <string name="sr_err_maxspace">Invalid free space !</string>
    <string name="sr_ssid">SHRINK</string>

    <!-- NotificationUtils -->
    <string name="initializing">Initializing</string>
    <string name="distributing">Distributing</string>
    <string name="receiving">Receiving data</string>
    <string name="sending">Sending data</string>
    <string name="compressing">Compressing</string>
    <string name="decompressing">Decompressing</string>
    <string name="completed">Completed</string>
    <string name="processing">Processing</string>
    <string name="gather">Gathering results</string>
    <string name="nt_channel">SHRINK_NOTIFICATION_ID</string>
    <string name="nt_channel_desc">SHRINK_NOTIFICATION_DESC</string>

    <!-- FileChooser -->
    <string name="fc_title">Choose a file</string>
    <string name="fc_cancel">Cancel</string>

    <!-- Misc -->
    <string name="next">Next</string>
    <string name="log">Logs:</string>
    <string name="empty"></string>
    <string name="hide">Hide</string>

    <!-- Error -->
    <string name="err_connect_failed">Connection interrupted !</string>
    <string name="err_server_failed">Server lost !</string>
    <string name="err_os_not_supported">Operating System not Supported !</string>
    <string name="err_invalid_config">Invalid Configuration !</string>
    <string name="err_task_allocation">Task Allocation failed !</string>
    <string name="err_file_corrupt">File Corrupt !</string>
    <string name="err_file_not_selected">First select a file !</string>
    <string name="err_invalid_file">Invalid File !</string>
    <string name="err_wifi_failed">WiFi failed !</string>
    <string name="err_disable_wifiap">Turn off WiFi Hotspot first !</string>
    <string name="err_wifiap_failed">WiFi hotspot failed !</string>
    <string name="err_file_not_found">File not found !</string>
    <string name="err_dcmp_failed">Decompression Failed !</string>
    <string name="err_cmp_failed">Compression Failed !</string>
    <string name="err_insufficient_storage">Not enough free space available !</string>
    <string name="err_device_failed">A slave was disconnected !</string>
    <string name="err_permission_denied">Permission not granted !</string>

    <!-- Decompress -->
    <string name="df_title">Decompressor</string>
    <string name="df_filename">FileName: %1$s</string>
    <string name="df_decompress">Decompress</string>

    <!-- Progress -->
    <string name="p_title">Shrink - Network</string>
    <string name="p_scanning">Looking for server ...</string>


</resources>