<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="pebble.shrink.Shrink">

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="120dp"
        android:text="@string/app_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvAppDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvtitle"
        android:layout_alignLeft="@+id/tvtitle"
        android:layout_alignRight="@+id/tvtitle"
        android:layout_alignStart="@+id/tvtitle"
        android:layout_below="@+id/tvtitle"
        android:layout_marginTop="48dp"
        android:text="@string/app_desc" />

    <Button
        android:id="@+id/nextCmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:onClick="clickNext"
        android:text="@string/next" />


</RelativeLayout>
